<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTintMode="multiply"
        android:orientation="vertical"
        android:padding="16dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/Titulo_formulario"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:text="@string/Formulario"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Email_Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:helperText="@string/Campo"
            app:helperTextEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Correo"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:endIconMode="password_toggle"
            app:helperText="@string/Campo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Contra_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Contraseña"
                android:inputType="textPassword" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Confir_Contra_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:helperText="@string/Campo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confir_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Repetir_Contra"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/genre_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Genero"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton_Female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Femenino" />

            <RadioButton
                android:id="@+id/radioButton_Male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Masculino" />
        </RadioGroup>

        <TextView
            android:id="@+id/Hobbies_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Pasatiempos"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/Sport_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Deporte" />

            <CheckBox
                android:id="@+id/Read_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/leer" />

            <CheckBox
                android:id="@+id/eat_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eat" />

            <CheckBox
                android:id="@+id/play_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/play" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Born_place"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/born_spinner"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:entries="@array/Place_Born" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Born_date_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_born_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/Date_born" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/guardar"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/info_text_View"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Vista_texto"
            android:textColor="@color/black"
            android:textSize="16sp" />


    </LinearLayout>


</ScrollView>